# mm

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
examples/: ex_01.cpp
include/mm/: iterable.hpp  mm.hpp
include/ngm/: ngm.hpp  print.hpp
tests/: tests.cpp
